--- a/code_book.html
+++ b/code_book.html
@@ -112,7 +112,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <p>Finally a Fast Fourier Transform (FFT) was applied to some of these signals producing <strong>fBodyAcc-XYZ</strong>, <strong>fBodyAccJerk-XYZ</strong>, <strong>fBodyGyro-XYZ</strong>, <strong>fBodyAccJerkMag</strong>, <strong>fBodyGyroMag</strong>, <strong>fBodyGyroJerkMag</strong>. (Note the ‘f’ to indicate frequency domain signals).</p>
 <p>These signals were used to estimate variables of the feature vector for each pattern:</p>
 <ul>
-<li>‘-mean()’, ‘std()’ are used for the estimated mean and standard deviations,</li>
+<li>‘-mean()’, ‘-std()’ are used for the estimated mean and standard deviations,</li>
 <li>‘-X’, ‘-Y’, ‘-Z’ are used to denote 3-axial signals in the X, Y and Z directions.</li>
 </ul>
 <table>
